--- a/.github/workflows/issue_check.yml
+++ b/.github/workflows/issue_check.yml
@@ -9,7 +9,9 @@ jobs:
     if: ${{github.event.comment.body == 'Build website'}}
     name: Change issue title
     runs-on: ubuntu-latest
-    steps: 
+    steps:
+      - id: label 
+        run: echo ${{github.event.label}}
       - id: tolowerCase
         uses: ASzc/change-string-case-action@v5
         with:
