--- a/.github/workflows/issue_check.yml
+++ b/.github/workflows/issue_check.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: label 
-        run: echo $github.event.label
+        run: echo ${{github.event.comment.body}}
       - id: tolowerCase
         uses: ASzc/change-string-case-action@v5
         with:
-          string: $github.event.label
+          string: ${{github.event.comment.body}}
       - id: print 
         run: echo ${{steps.tolowerCase.outputs.lowercase}}
