--- a/.github/workflows/issue_check.yml
+++ b/.github/workflows/issue_check.yml
@@ -1,7 +1,8 @@
 on:
-  issue_comment:
-    types:
-      [created]
+  push:
+#   issue_comment:
+#     types:
+#       [created]
   
 name: "Issue name change"
 jobs:
