--- a/.github/workflows/issue_check.yml
+++ b/.github/workflows/issue_check.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: label 
-        run: echo ${{romJson(github.event)}}
+        run: echo ${{fromJson(github.event)}}
 #       - id: tolowerCase
 #         uses: ASzc/change-string-case-action@v5
 #         with:
