--- a/.github/workflows/issue_check.yml
+++ b/.github/workflows/issue_check.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: label 
-        run: echo ${{ toJson(github) }}
+        run: echo ${{ toJson(github.event.issue) }}
       - id: tolowerCase
         uses: ASzc/change-string-case-action@v5
         with:
