--- a/.github/workflows/issue_check.yml
+++ b/.github/workflows/issue_check.yml
@@ -11,8 +11,10 @@ jobs:
     name: Change issue title
     runs-on: ubuntu-latest
     steps:
-      - id: label 
-        run: echo ${{ toJson(github.event.issue) }}
+      - name: View the github context
+        run: echo "$GITHUB_CONTEXT"
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
       - id: tolowerCase
         uses: ASzc/change-string-case-action@v5
         with:
